--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -120,6 +120,8 @@
     "id": "okqaW6wEr7jW"
    },
    "source": [
+    "Let us denote a ML model as a function $$\\hat y = f(X)$$ where $y$ is a target and $X$ is input features.\n",
+    "\n",
     "The problem of changed data is known as **dataset (distribution) shift**. We consider two types of distribution shifts: concept shifts and covariate shifts.\n",
     "\n",
     "**Concept shift** is the shift in the conditional distribution of target by given features while the distribution of features remains the same:\n",
@@ -183,7 +185,7 @@
     "id": "1F9DIud6r7jX"
    },
    "source": [
-    "In this tutorial, we will learn how to evaluate the model robustness to covariate dataset shift and then will look at how the generative models can be used in the evaluation."
+    "In this tutorial, we will learn how to evaluate the model robustness to covariate dataset shift uwing worst-case risk and then will look at how the generative models can be used for better evaluation."
    ]
   },
   {
@@ -356,36 +358,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "LOB61Eezr7jc"
-   },
-   "source": [
-    "Let us consider the train and test target data distribution. It is the common practice in time series data to compare the distribution of the difference between subsequent datapoints:\n",
-    "$$\\text{diff}_i = x_i - x_{i-1}$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "mW5KMPMcyYFh"
-   },
-   "outputs": [],
-   "source": [
-    "hist2samp(train_target, test_target, 'train', 'test', nbins=30)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "_fhpOk51r7jc"
-   },
-   "source": [
-    "We can see that some slight dataset shift is introduced in the test sample."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "u5TAuDzqr7jc"
    },
    "source": [
@@ -419,7 +391,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "lstm_model = LSTMForecaster(hidden_dim=64, window_size=100, lr=0.01, num_epochs=30, batch_size=32)\n",
+    "lstm_model = LSTMForecaster(hidden_dim=64, window_size=100, lr=0.01, num_epochs=15, batch_size=32)\n",
     "lstm_model.fit(train_target, train_cov)\n",
     "\"\"\";"
    ]
@@ -553,7 +525,7 @@
     "id": "BRlZePmJr7ji"
    },
    "source": [
-    "We will use the followin forecasting problem:\n",
+    "Let us define the followin forecasting problem:\n",
     "* input size is 10 weeks\n",
     "* forecasting horizon is 100 weeks"
    ]
@@ -566,9 +538,8 @@
    },
    "outputs": [],
    "source": [
-    "train_lstm_error = backtest(lstm_model, input_size=10, horizon=100, target=train_target, cov=train_cov)\n",
     "test_lstm_error = backtest(lstm_model, input_size=10, horizon=100, target=test_target, cov=test_cov)\n",
-    "train_lstm_error.mean(), test_lstm_error.mean()"
+    "test_lstm_error.mean()"
    ]
   },
   {
@@ -577,7 +548,7 @@
     "id": "fwdojO8Tr7jj"
    },
    "source": [
-    "## How to estimate the possible risks?"
+    "## How to estimate possible risks?"
    ]
   },
   {
@@ -588,8 +559,8 @@
    "source": [
     "**Idea: some variables can change, other are fixed.**\n",
     "\n",
-    "* __Immutable variables__ keep their distribution unchanged while dataset shifts occur (e.g. demographic characteristics)\n",
-    "* __Mutable variables__ can have changes (e.g. treatment plan)\n",
+    "* __Immutable variables__ keep their distribution unchanged while dataset shifts occur\n",
+    "* __Mutable variables__ can have changes\n",
     "\n",
     "Notation:\n",
     "* $X = W \\cup Z$\n",
@@ -600,10 +571,10 @@
     "\n",
     "Shifted data: $P_{tst}(X)=Q(W|Z)P(Z)$\n",
     "\n",
-    "**Worst-case risk** is the method to esimate potential decrease of the quality due to dataset shift. The steps of estimation:\n",
+    "**Worst-case risk** is the method to esimate potential decrease of the quality due to dataset shifts. The steps of estimation:\n",
     "1. Find the small fraction of the data which the model predicts the worst\n",
     "2. Make sure the distribution of immutable variables is (almost) the same\n",
-    "3. Evaluate the model on this subsample\n",
+    "3. The metric on the worst subsample is the risk of the model.\n",
     "\n",
     "**The smaller the fraction, the higher the risk and vice versa.** The size of the fraction is denoted as $(1-\\alpha)$.\n",
     "\n",
@@ -852,24 +823,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "RGyrj0URr7jl"
-   },
-   "source": [
-    "| Discriminative models | Generative models |\n",
-    "|:---|:---|\n",
-    "| Aims to predict the label by the given example| Aims to learn the full data distribution by the given subsample |\n",
-    "| Learns the probability $y \\sim P(y|X)$ | Learns the probability $X,y \\sim P(X, y)$ or $X \\sim P(X)$ |\n",
-    "| _Examples of tasks:_ | _Examples of tasks:_ |\n",
-    "| 1. Is a cat on the photo? | 1. Create a photo of a cat that looks like the average of two given cat photos |\n",
-    "| 2. How old is a person on the photo? | 2. Create a photo of an avocado armchair |\n",
-    "| 3. What is the most likely number of tourists the next mounth? | 3. Write an essay on the topic of global warming |\n",
-    "| _Examples of models:_ | _Examples of models:_ |\n",
-    "| Decision Tree, Support Vector Machine (SVM), Convolutional Neural Network (CNN) | Autoregressive model (AR), Generative Adversarial Network (GAN), Variational Autoencoder (VAE), Generative Pretrained Transformer (GPT)|\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "AXoUcfsFr7jl"
    },
    "source": [
@@ -905,13 +858,7 @@
     "A Generative Adversarial Network (GAN) is a type of model that consists of two neural networks: a generator and a discriminator.\n",
     "\n",
     "* The objective of a generator (G) is to create realistic data\n",
-    "* The objective of a discriminator (D) is to detect fake data\n",
-    "\n",
-    "We note the multivariate time series as $X_1, X_2, \\dots, X_N$, where $X_t \\in R^d$\n",
-    "\n",
-    "The general objective of GAN is\n",
-    "\n",
-    "$$\\min_G \\max_D V(D, G) = \\mathbb E_{X} \\log(D(X)) + \\mathbb E_{Z} \\log(1 - D(G(Z))$$"
+    "* The objective of a discriminator (D) is to detect fake data"
    ]
   },
   {
@@ -1100,6 +1047,9 @@
     "id": "9AY8CYPAr7jn"
    },
    "source": [
+    "Let us consider the test and fake target data distribution. It is the common practice in time series data to compare the distributions of the difference between subsequent datapoints:\n",
+    "$$\\text{diff}_i = x_i - x_{i-1}$$ \n",
+    "\n",
     "Visual evaluation by histograms of difference:"
    ]
   },
@@ -1175,8 +1125,8 @@
    "outputs": [],
    "source": [
     "def pacf_error(target0, target1, nlags=10):\n",
-    "    pacf0 = acf(target0, nlags=nlags)[1:]\n",
-    "    pacf1 = acf(target1, nlags=nlags)[1:]\n",
+    "    pacf0 = pacf(target0, nlags=nlags)[1:]\n",
+    "    pacf1 = pacf(target1, nlags=nlags)[1:]\n",
     "    error = (pacf0 - pacf1)**2\n",
     "    return error.mean()"
    ]
@@ -1215,7 +1165,7 @@
     "Conclusions so far:\n",
     "* We split the dataset into train, test sets\n",
     "* We trained GAN on the test set, as we are looking for shifts close to the test period\n",
-    "* We created fake time series and visually checked that they are similar to the real ones"
+    "* We created fake time series and checked that they are similar to the real ones"
    ]
   },
   {
