--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -1341,7 +1341,7 @@
     "risk_idx = np.where(fake_target.index == risk_date)[0][0]\n",
     "\n",
     "plt.figure(figsize=(10, 3))\n",
-    "plt.plot(test_target.iloc[risk_idx-10:risk_idx+100])\n",
+    "plt.plot(fake_target.iloc[risk_idx-10:risk_idx+100])\n",
     "plt.show()"
    ]
   },
